some erroe fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary py-0">
       <div class="container-fluid">
         <a class="navbar-brand d-flex" href="index.html">
-          <img src="./assest/img/logo2.png" alt="logo" width="85px">
+          <img src="./assest/img/Logo2.png" alt="logo" width="85px">
           <div class="d-inline mt-2 ms-2 text-center fw-bold">
              <span class="fs-4">Gyansthali</span><br>
              <span>International School</span>
