--- a/index.html
+++ b/index.html
@@ -18,47 +18,45 @@
         <a class="navbar-brand d-flex" href="index.html">
           <img src="./assest/img/Logo2.png" alt="logo" width="85px">
           <div class="d-inline mt-2 ms-2 text-center fw-bold">
-             <span class="fs-4">Gyansthali</span><br>
-             <span>International School</span>
+            <span class="fs-4 mb-0">Gyansthali</span><br>
+            <span class="mt-0">International School</span>
           </div>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item bg-denger2">
-              <a class="nav-link active text-white fw-bold" aria-current="page" href="#">HOME</a>
+              <a class="nav-link active text-white fw-bold" aria-current="page" href="index.html">HOME</a>
             </li>
-            <li class="nav-item " >
+            <li class="nav-item ">
               <a class="nav-link fw-bold" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 CLASSES
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu py-0">
                 <li><a class="dropdown-item" href="#">Classes</a></li>
                 <li><a class="dropdown-item" href="#">Classes Details</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 TEACHERS
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu py-0">
                 <li><a class="dropdown-item" href="#">Teachers</a></li>
                 <li><a class="dropdown-item" href="#">Teachers Details</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 PAGES
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu py-0">
                 <li><a class="dropdown-item" href="#">About Us</a></li>
                 <li><a class="dropdown-item" href="#">Our Teachers</a></li>
                 <li><a class="dropdown-item" href="#">Login</a></li>
@@ -69,11 +67,10 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a class="nav-link fw-bold" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 BLOG
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu py-0">
                 <li><a class="dropdown-item" href="#">Blog</a></li>
                 <li><a class="dropdown-item" href="#">Blog Details</a></li>
               </ul>
@@ -83,8 +80,9 @@
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2 border-0 bg-light" type="search"  aria-label="Search">
-            <button class="btn btn-outline-success rounded-circle me-2" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <!-- <input class="form-control me-2 border-0 bg-light" type="search"  aria-label="Search"> -->
+            <button class="btn btn-outline-success rounded-circle me-2" type="submit"><i
+                class="fa-solid fa-magnifying-glass"></i></button>
             <button class="btn btn-success">Login/Register</button>
           </form>
         </div>
@@ -94,30 +92,33 @@
   <!-- Header Section End-->
 
   <!-- carousel start -->
-  <div id="carouselExampleCaptions" class="carousel slide">
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./assest/img/1.jpeg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-item active" data-bs-interval="3000">
+        <img src="./assest/img/1.jpeg" class="d-block w-100" alt="1st image" height="800">
+        <div class="carousel-caption d-none d-md-block text-white">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="./assest/img/3.jpeg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="./assest/img/7.jpeg" class="d-block w-100" alt="2nd image" height="800">
+        <div class="carousel-caption d-none d-md-block text-white">
           <h5>Second slide label</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assest/img/6.jpeg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
+        <img src="./assest/img/6.jpeg" class="d-block w-100" alt="3rd image" height="800">
+        <div class="carousel-caption d-none d-md-block text-white">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
@@ -133,6 +134,61 @@
     </button>
   </div>
   <!-- carousel end -->
+
+  <!-- our feature section start -->
+  <div class="ourfeature mx-auto">
+    <div class="container">
+      <div class="row">
+        <div class="col-3 ">
+          <div class="card bg-warning2 text-white fw-thin text-center">
+            <div class="card-body">
+              <h5 class="card-title">Expert teachers</h5>
+              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card bg-denger2 text-white fw-thin text-center">
+            <div class="card-body">
+              <h5 class="card-title">Quality Education</h5>
+              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3 ">
+          <div class="card bg-primary2 text-white fw-thin text-center">
+            <div class="card-body">
+              <h5 class="card-title">Life Time Support</h5>
+              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card bg-info2 text-white fw-thin text-center">
+            <div class="card-body">
+              <h5 class="card-title">Scholarship News</h5>
+              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+  <!-- our feature section end -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
