add our feature section

--- a/index.html
+++ b/index.html
@@ -139,47 +139,55 @@
   <div class="ourfeature mx-auto">
     <div class="container">
       <div class="row">
-        <div class="col-3 ">
-          <div class="card bg-warning2 text-white fw-thin text-center">
+        <div class="col-lg-3 col-md-6 mt-5 pt-5 ">
+          <div class="card bg-warning2 text-white fw-thin text-center position-relative">
             <div class="card-body">
-              <h5 class="card-title">Expert teachers</h5>
-              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Expert teachers</h5>
+              <h2 class="text-decoration-underline text-center mt-0">&nbsp; &nbsp; &nbsp;</h2>
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
+              <img src="./assest/img/teacher.png" alt="teacher">
             </div>
           </div>
         </div>
-        <div class="col-3">
-          <div class="card bg-denger2 text-white fw-thin text-center">
+        <div class="col-lg-3 col-md-6 mt-5 pt-5">
+          <div class="card bg-denger2 text-white fw-thin text-center position-relative">
             <div class="card-body">
-              <h5 class="card-title">Quality Education</h5>
+              <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Quality Education</h5>
               <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
+              <img src="./assest/img/book.png" alt="teacher">
             </div>
           </div>
         </div>
-        <div class="col-3 ">
-          <div class="card bg-primary2 text-white fw-thin text-center">
+        <div class="col-lg-3 col-md-6 mt-5 pt-5">
+          <div class="card bg-primary2 text-white fw-thin text-center position-relative">
             <div class="card-body">
-              <h5 class="card-title">Life Time Support</h5>
+              <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Life Time Support</h5>
               <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
+              <img src="./assest/img/support.png" alt="teacher">
             </div>
           </div>
         </div>
-        <div class="col-3">
-          <div class="card bg-info2 text-white fw-thin text-center">
+        <div class="col-lg-3 col-md-6 mt-5 pt-5">
+          <div class="card bg-info2 text-white fw-thin text-center position-relative">
             <div class="card-body">
-              <h5 class="card-title">Scholarship News</h5>
+              <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Scholarship News</h5>
               <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
+              <img src="./assest/img/scholarship.png" alt="teacher">
             </div>
           </div>
         </div>
