--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </header>
   <!-- Header Section End-->
 
-  <!-- carousel start -->
+  <!-- slider section start -->
   <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -131,7 +131,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <!-- carousel end -->
+  <!-- slider section end -->
 
   <!-- our feature section start -->
   <div class="ourfeature mx-auto">
@@ -142,7 +142,8 @@
             <div class="card-body">
               <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Expert teachers</h5>
               <h2 class="text-decoration-underline text-center mt-0">&nbsp; &nbsp; &nbsp;</h2>
-              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the
+                bulk of the card's
                 content.</p>
             </div>
             <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
@@ -154,8 +155,9 @@
           <div class="card bg-denger2 text-white fw-thin text-center position-relative">
             <div class="card-body">
               <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Quality Education</h5>
-              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
-              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
+              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp; &nbsp;</h2>
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the
+                bulk of the card's
                 content.</p>
             </div>
             <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
@@ -167,8 +169,9 @@
           <div class="card bg-primary2 text-white fw-thin text-center position-relative">
             <div class="card-body">
               <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Life Time Support</h5>
-              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
-              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
+              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp; &nbsp;</h2>
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the
+                bulk of the card's
                 content.</p>
             </div>
             <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
@@ -180,8 +183,9 @@
           <div class="card bg-info2 text-white fw-thin text-center position-relative">
             <div class="card-body">
               <h5 class="card-title fw-thin mb-0 pb-0 mt-5 pt-3">Scholarship News</h5>
-              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp;</h2>
-              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the bulk of the card's
+              <h2 class="text-decoration-underline text-center">&nbsp; &nbsp; &nbsp;</h2>
+              <p class="card-text text-center mb-3">Some quick example text to build on the card title and make up the
+                bulk of the card's
                 content.</p>
             </div>
             <div class="bg-white shadow rounded-circle position-absolute p-4 top-0 start-50 translate-middle">
@@ -191,11 +195,27 @@
         </div>
       </div>
     </div>
-
-
   </div>
   <!-- our feature section end -->
+  <!-- onlinelearning section start  -->
+  <div class="onlinelearning">
+     <div class="container">
+      <div class="row">
+        <div class="col-lg-7">
+          <img src="./assest/img/aboutImg.png" alt="about Image" class="img-fluid">
+        </div>
+        <div class="col-lg-5">
+          <div>
+            <h2>Online Learning<span class="d-block">PLatform</span></h2>
+          </div>
+        </div>
+      </div>
+     </div>
+   </div>
 
+
+
+  <!-- onlinelearning section end  -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
