--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="3000">
-        <img src="./assest/img/1.jpeg" class="d-block w-100" alt="1st Image" height="800">
+        <img src="./assest/img/1.jpeg" class="d-block w-100" alt="1st Image" height="800" >
         <div class="carousel-caption d-none d-md-block text-white slidetext1">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
@@ -199,7 +199,7 @@
   <!-- our feature section end -->
   <!-- onlinelearning section start  -->
   <div class="onlinelearning">
-     <div class="container">
+    <div class="container">
       <div class="row">
         <div class="col-lg-7">
           <img src="./assest/img/aboutImg.png" alt="about Image" class="img-fluid">
@@ -208,14 +208,65 @@
           <div>
             <h2>Online Learning<span class="d-block">PLatform</span></h2>
           </div>
+
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni quo reprehenderit libero corporis minus
+            expedita
+            error? Quia ea quo vero. Quos delectus praesentium cum fuga consequuntur saepe obcaecati ipsa officia?
+          </p>
+
+          <div class="row">
+            <div class="col-2">
+              <div class="bg-info rounded-circle py-3 px-2">
+                <img src="./assest/img/education.png" alt="book" class="img-fluid d-block">
+              </div>
+            </div>
+            <div class="col-10">
+              <h3>Special Education</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatem architecto dolore?</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-2">
+              <div class="bg-success rounded-circle py-3 px-2">
+                <img src="./assest/img/class.png" alt="class" class="img-fluid ">
+              </div>
+            </div>
+            <div class="col-10">
+              <h3>Honors classes</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatem architecto dolore?</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-2">
+              <div class="bg-denger2 rounded-circle py-3 px-2">
+                <img src="./assest/img/academy.png" alt="academy" class="img-fluid">
+              </div>
+            </div>
+            <div class="col-10">
+              <h3>Traditional academies</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatem architecto dolore?</p>
+            </div>
+          </div>
         </div>
       </div>
-     </div>
+    </div>
+  </div>
+  <!-- onlinelearning section end  -->
+
+  <!-- ourPopularClass section start -->
+   
+    <div class="container-fluid">
+      <div class="row">
+        <div class="ourpopularclass">
+          <h1 class="text-center py-5 mt-5">Our Popular Classes</h1>
+          <h2 class="text-decoration-underline text-center text-warning">&nbsp; &nbsp; &nbsp;</h2>
+      </div>
+    </div>
    </div>
 
-
-
-  <!-- onlinelearning section end  -->
+  <!-- ourPopularClass section end -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
