photo gallery progress

--- a/index.html
+++ b/index.html
@@ -342,6 +342,76 @@
 
   <!-- ourPopularClass section end -->
 
+
+  <!-- contact us section start -->  
+  <div class="contactUs py-4 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="offset-lg-2 col-lg-8">
+             <h2>We Are The Best
+              <span>Choice For Your Child</span>
+             </h2>
+             <p class="py-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quaerat porro fugiat minus tenetur odit aliquam cum, vitae praesentium ullam perspiciatis dolorum dolore ratione quisquam beatae in dolorem adipisci tempora. Doloribus reiciendis, cum unde maiores ex itaque pariatur in atque?</p>
+             <a href="javascript.void()" class="btn btn-danger bg-denger2 text-white py-3 px-5 rounded-pill" >CONTACT US</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- contact us section end --> 
+  
+  
+  <!-- OurVideo section start -->
+  <div class="ourVideo py-4 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="offset-lg-2 col-lg-8">
+          <h2>Watch Our Video</h2>
+          <div class="video mt-5 mb-5">
+            <div class="playbtn">
+              <a data-fancybox href="https://youtu.be/PZY-hB2C_Iw">
+                <span></span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- OurVideo section end -->
+
+  <!-- Gallery section start -->
+      <div class="gallery">
+        <div class="container">
+          <div class="row d-flex">
+            <div class="col-lg-3">
+              <div class="gallery_box">
+                <h2>Photo Gallery</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab facilis vel culpa. Dolorum, officia inventore?</p>
+                <a class="btn btn-warning text-white rounded-pill py-3 px-5 text-uppercase" href="#">View All Gallery</a>
+              </div>
+            </div>
+            <div class="col-lg-9">
+              <div class="row">
+                <div class="col-md-3">
+                  <div>
+                    
+                  </div>
+                </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
+              </div>
+              <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  <!-- Gallery section end -->
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
   <script src=".assest/js/script.js"></script>
